# rpn2tex

./: .coverage  .gitignore  README.md  pyproject.toml  pyrightconfig.json
examples/: basic.rpn  complex.rpn
src/rpn2tex/: __init__.py  __version__.py  ast_nodes.py  cli.py  errors.py  latex_gen.py  lexer.py  parser.py  tokens.py
tests/: __init__.py  test_rpn2tex.py
